syntax="proto3";

package atria.seniorliving.proto.itemsapi;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "google/protobuf/timestamp.proto";
//import "common.proto";

option go_package = "github.com/ntv97/atriaseniorliving/proto/gen";

service WaitstaffService {
    rpc GetListOrderFulfillment(GetListOrderFulfillmentRequest) returns (GetListOrderFulfillmentResponse) {
        option (google.api.http) = {
            get: "/v1/fulfillment-orders"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "List order fulfillment"
            description: "List order fulfillment on the server."
            tags: "Orders"
        };
    }
    rpc PlaceOrder(PlaceOrderRequest) returns (PlaceOrderResponse) {
        option (google.api.http) = {
            post: "/v1/api/orders"
            body: "*"
        };
        option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
            summary: "Place an order"
            description: "Place an order on the server."
            tags: "Orders"
        };
    }
}

message GetListOrderFulfillmentRequest {}
message GetListOrderFulfillmentResponse {
  repeated OrderDto orders = 1;
}

message OrderDto {
    string id = 1;
    int32 order_table = 2;
    string order_name = 3;
    int32 order_status = 4;
    repeated LineItemDto line_items = 6;
}

message LineItemDto {
    string id = 1;
    int32 item_type = 2;
    string item_name = 3;
    string order_name = 4;
    int32 item_status = 5;
    string order_type = 6;
}

message PlaceOrderRequest {
    int32 command_type = 1;
    int32 order_table = 2;
    int32 order_name = 3;
    repeated CommandItem cook_items = 5;
    repeated CommandItem chef_items = 6;
    repeated CommandItem waitstaff_items = 7;
    google.protobuf.Timestamp timestamp = 8;
}
message PlaceOrderResponse {}

message CommandItem {
    int32 item_type = 1;
}
